# www

./: .gitignore  CMakeLists.txt  README.md
scripts/: download_model.sh
src/: generator.cpp  generator.h  main.cpp  personas.h  renderer.cpp  renderer.h
